--- a/About Me.html
+++ b/About Me.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>About Me</title>
     <link rel="stylesheet" href="./assets/css/substyle.css">
     <link rel="stylesheet" href="./assets/css/submobilestyle.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.webp">
     <link rel="stylesheet" href="./assets/css/dark mode.css">
     <script src="./assets/js/script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -40,7 +40,7 @@
         <div class="banner">
             <div class="banner-intro">
                 <p class="t1">Welcome to,</p>
-                <p class="t2">My Education...</p>
+                <p class="t2">My About Section...</p>
             </div>
             <div class="buttons">
                 <button id="download">CV/Resume</button>
@@ -52,53 +52,55 @@
         <div class="info-section">
             <div class="info">
                 <p class="heading">
-                    Welcome to my Education page
+                    Welcome to my About Me page
                 </p>
                 <p class="description">
-                    Here, I've detailed my academic journey, starting from my foundational school years to my ongoing Bachelor of Technology program in Electronics and Communication Engineering. My education has been instrumental in shaping my problem-solving abilities, technical expertise, and passion for innovation. Along the way, I've achieved milestones and participated in various competitions that have enriched my learning experience.<br>
-                    Explore the sections below to learn more about my academic background, key coursework, and notable achievements.
+                    I am currently pursuing my <b>Bachelor of Technology</b> in <b>Electronics and Communication Engineering</b> <i>(2023-Present(Expected Graduation: 2027))</i>, where I've gained knowledge in <u>data structures</u>, <u>artificial intelligence</u>, <u>Python</u>, <u>Java</u>,<u>C</u>,<u>C++</u> and <u>OOPs</u>. My academic journey is complemented by hands-on experience in building projects and learning industry-relevant tools.
                 </p>
             </div>
             <hr class="divider">
             <div class="info">
-                <p class="heading"><b>Secondary Examination(Class X)</b></p>
+                <p class="heading"><a href="Education.html">Education</a></p>
+                <p class="description">
+                    My coursework has built a strong foundation in <b>data structures</b>, <b>artificial intelligence</b>, <b>object-oriented programming</b>, and <b>embedded systems</b>. I am passionate about <b>software development</b> and <b>hardware integration</b> aiming to bridge the gap between <b>electronics</b> and <b>programming</b>.
+                </p>
+            </div>
+            <hr class="divider">
+            <div class="info">
+                <p class="heading">Technical Skills</p>
                 <p class="description">
                     <ul>
-                        <li>Behala Aryya Vidyamandir(<i>2020-2021</i>)</li>
-                        <li><b>Percentage:</b> 86.43%</li>
-                        <li><b>Achievements:</b> Got certificate in poem recitation competition until subdistrict level</li>
+                        <li><b>Programming Languages:</b> Python, Java, C, C++, JavaScript.</li>
+                        <li><b>Web Development:</b> HTML, CSS, JS.</li>
+                        <li><b>Software Development:</b> Object-Oriented Programming (OOP), Data Structures &amp; Algorithms (DSA).</li>
+                        <li><b>Artificial Intelligence:</b> Machine Learning basics, Neural Networks.</li>
+                        <li><b>Tools &amp; Platforms:</b> Git, GitHub, VS Code.</li>
                     </ul>
                 </p>
             </div>
             <hr class="divider">
             <div class="info">
-                <p class="heading"><b>Higher Secondary Examination(Class XII)</b></p>
+                <p class="heading"><a href="Projects.html">Projects</a></p>
                 <p class="description">
                     <ul>
-                        <li>Behala Aryya Vidyamandir(<i>2021-2023</i>)</li>
-                        <li><b>Major Subjects:</b> Physics, Chemistry, Mathematics, Computer Science</li>
-                        <li><b>Percentage:</b> 71.8%</li>
-                        <li><b>Achievements:</b> Got awarded in Environment Day Quiz Competition</li>
-                    </ul>
+                        <li><b>Amazon Clone:</b> Built a responsive e-commerce UI with <b>HTML, CSS, and JavaScript</b>.</li>
+                        <li><b>Tic Tac Toe Game:</b> Developed a web-based <b>JavaScript Tic Tac Toe</b> with AI.</li>
+                        <li><b>Pokemon Simulation:</b> Developed a simulation of Pokémon battle mechanics using <b>C</b>.</li>
+                        <li><b>Stone Paper Scissors:</b> Built a web-based <b>Stone Paper Scissors</b> game using <b>HTML, CSS, and JavaScript</b>.</li>
+                    </ul>                    
                 </p>
             </div>
             <hr class="divider">
             <div class="info">
-                <p class="heading"><b>Bachelor of Technology</b></p>
+                <p class="heading">Goals And Aspirations</p>
                 <p class="description">
-                    <ul>
-                        <li>St. Thomas College of Engineering and Technology(<i>2023-Present(Expected Graduation: 2027)</i>)</li>
-                        <li><b>Stream:</b> Electronics and Communication Engineering</li>
-                        <li><b>Key courseworks:</b> Data structures,Artificial Intelligence,IELTS,Python,Java,OOPs</li>
-                        <li><b>Mini projects:</b> Guess The Number Game, Password Generator, Pokemon Battle Simulation, Banking system, Portfolio page</li>
-                    </ul>
+                    I am deeply interested in <b>AI-driven applications, embedded systems, and full-stack web development</b>. My goal is to work on innovative projects that combine <b>software and hardware</b>, making technology more accessible and efficient. I am constantly learning new technologies to enhance my expertise in the <b>tech industry</b>.
                 </p>
-                <p class="description">(Details in <a href="/portfolio/Projects.html" target="_main">Projects</a> page)</p>
             </div>
             <hr class="divider">
             <div class="quote">
                 <p class="quoted">
-                    <i>"With science, we can conquer anything."</i>
+                    <i>"Science is just a name for the steady, pain-in-the-ass effort that goes behind it!"</i>
                 </p>
                     <p class="quoter"><b>-Senku Ishigami</b></p>
             </div>
@@ -115,7 +117,7 @@
                 <a class="link" href="https://www.instagram.com/adrishikharchowdhury/" target="_main"><i class="fa-brands fa-instagram"></i></a>
                 <a class="link" href="https://linktr.ee/Adrishikhar" target="_main"><i class="fa-solid fa-tree"></i></a>
             </div>
-        <hr class="divider">
+        <hr>
     <div  class="copyright">
         <div class="copyright-heading">
             <p>
