--- a/Experience.html
+++ b/Experience.html
@@ -2,97 +2,125 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/mobilestyle.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/60a890c3-caee-4e3f-8a61-bb90e5c70aa8/favicon.png?v=1737820814093">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiences</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/css/substyle.css">
+    <link rel="stylesheet" href="./assets/css/submobilestyle.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo.webp">
+    <link rel="stylesheet" href="./assets/css/dark mode.css">
+    <script src="./assets/js/script.js" defer></script>
 </head>
 <body>
     <header>
         <div class="navbar">
-            <big>
-                <div class="customhead">
-                    <div id="logo2">
+            <div class="name">
+                <a href="index.html">Adrishikhar Chowdhury</a>
+            </div>
+            <div class="hamburger" onclick="toggleMenu()">☰</div>
+            <div class="navlinks">
+                <div class="link"><a href="About Me.html">About Me</a></div>
+                <div class="link"><a href="Education.html">Education</a></div>
+                <div class="link"><a href="Experience.html">Experiences</a></div>
+                <div class="link"><a href="Projects.html">Projects</a></div>
+                <div class="link"><a href="Contact Me.html">Contact Me</a></div>
+            </div>
+        </div>
 
-                    </div>
-                </div></big>
-                <div class="navhead">
-                    <a class="navlink" href="/portfolio/index.html" target="_main">Home</a>
-                    <a class="navlink" href="/portfolio/Education.html" target="_main">Education</a>
-                    <a class="navlink" href="/portfolio/Experience.html">Experiences</a>
-                    <a class="navlink" href="/portfolio/Projects.html">Projects</a>
-                    <a class="navlink" href="/portfolio/Contact Me.html">Contact Me</a>
-                </div> 
+        <!-- Mobile Menu -->
+        <div class="mobile-menu" id="mobileMenu">
+            <div class="link"><a href="About Me.html">About Me</a></div>
+            <div class="link"><a href="Education.html">Education</a></div>
+            <div class="link"><a href="Experience.html">Experiences</a></div>
+            <div class="link"><a href="Projects.html">Projects</a></div>
+            <div class="link"><a href="Contact Me.html">Contact Me</a></div>
         </div>
     </header>
-    <main>
-        <div class="contact">
-            <a href="/portfolio/Contact Me.html"><i class="fa-regular fa-message"></i></a>
+    <div id="pic">    
+        <div class="banner">
+            <div class="banner-intro">
+                <p class="t1">Welcome to,</p>
+                <p class="t2">My Experiences...</p>
+            </div>
+            <div class="buttons">
+                <button id="download">CV/Resume</button>
+                <i class="fa-solid fa-moon" id="toggle"></i>
+            </div>
         </div>
-        <br><br>
-            <section class="primary">
-                    <big><b>Welcome to my Experiences page</b></big>
-                </section>
-                <hr>
-                <section>
-                    <p>This section highlights my journey through internships, personal projects, and other hands-on experiences that have helped me develop practical skills and apply my academic knowledge in real-world scenarios. From exploring backend development during internships to working on personal projects like games and simulations, these experiences have been pivotal in shaping my technical expertise and problem-solving abilities.
-                    
-                        Dive in to learn more about the work I've done and the skills I've gained along the way. Feel free to explore the details below and discover the projects and tasks that have contributed to my growth as a developer and a learner.
-                    </p>
-            </section>
-        <hr>
-        <div>
-            <section>
-                <big><big><p><b>Intern</b></p></big></big>
-            <p>
+    </div>
+    <main>
+        <div class="info-section">
+            <div class="info">
+                <p class="heading">
+                    Welcome to my Experiences page
+                </p>
+                <p class="description">
+                    This section highlights my journey through internships, personal projects, and other hands-on experiences that have helped me develop practical skills and apply my academic knowledge in real-world scenarios. From exploring backend development during internships to working on personal projects like games and simulations, these experiences have been pivotal in shaping my technical expertise and problem-solving abilities. <br>
+                    Dive in to learn more about the work I've done and the skills I've gained along the way. Feel free to explore the details below and discover the projects and tasks that have contributed to my growth as a developer and a learner.
+                </p>
+            </div>
+            <hr class="divider">
+            <div class="info">
+                <p class="heading"><b>Intern</b></p>
+            <p class="description">
                 <ul>
-                    <li><b>ALABS</b> <i>(November 2024-Present):</i>
+                    <li><b>ALABS</b> <i>(November 2024-March 2025):</i>
                         <ul>
                             <li>Working and learning flask and postgreSQL using python</li>
                         </ul>
                         </li>
                 </ul>
             </p>
-            </section>
-        </div>
-    <hr>
-    <div>
-        <section>
-            <big><p><big><b>Personal Projects</b></big></p></big>
-            <p>
-                <ul>
-                    <li><b>Guess The Number Game</b><i>(November 2024)</i>: A simple game where the computer generates a random number and the user has to guess it</li>
-                    <li><b>Random Password Generator</b><i>(November 2024)</i>: A simple password generator which generates a random password of desired length</li>
-                    <li><b>Pokemon Battle Simulation</b><i>(July 2024)</i>: A simple simulation of a pokemon battle where two people choose their pokemon and the winner is decided based on their stats</li>
-                    <li> <b>Banking System</b><i>(November 2024)</i>: A simple banking system where you can create an account, deposit money, withdraw money and check balance</li>
-                    <li><b>Portfolio Page</b><i>(January 2025)</i>: A simple portfolio page where I have mentioned my details</li>
-                </ul>
-                    <p>(All of the project details in the <a href="/portfolio/Projects.html" target="_main" style="color:blue">projects </a>page)</p>
-            </p>
-        </section>
-    </div>
-    </main>
-    <hr>
-        <div>
-            <section>
-                <p align="center">
-                    <big><i>"Failure is simply the stepping stone to success."</i></big><br>
-                            <b>-Senku Ishigami</b>
-                </p>
-            </section>
-        </div>
-        <footer>
-            <div class="copyright">
-                    <small>
-                        <p class="foots">&copy; 2025 Adrishikhar Chowdhury. All rights reserved.</p>
-                        <br>
-                        <p class="foots">
-                            Building innovative projects and empowering others through knowledge and collaboration.
-                        </p>
-                    </small>
             </div>
+            <hr class="divider">
+            <div class="info">
+                <p class="heading"><b>Personal Projects</b></p>
+                    <p class="description">
+                        <ul>
+                            <li><b>Guess The Number Game</b><i>(November 2024)</i>: A simple game where the computer generates a random number and the user has to guess it</li>
+                            <li><b>Random Password Generator</b><i>(November 2024)</i>: A simple password generator which generates a random password of desired length</li>
+                            <li><b>Pokemon Battle Simulation</b><i>(July 2024)</i>: A simple simulation of a pokemon battle where two people choose their pokemon and the winner is decided based on their stats</li>
+                            <li> <b>Banking System</b><i>(November 2024)</i>: A simple banking system where you can create an account, deposit money, withdraw money and check balance</li>
+                            <li><b>Portfolio Page</b><i>(January 2025)</i>: A simple portfolio page where I have mentioned my details</li>
+                        </ul>
+                            <p class="description">(All of the project details in the <a href="Projects.html" target="_main">projects </a>page)</p>
+                    </p>
+            </div>
+            <hr class="divider">
+            <div class="quote">
+                <p class="quoted">
+                    <i>"Failure is simply the stepping stone to success."</i>
+                </p>
+                    <p class="quoter"><b>-Senku Ishigami</b></p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <b><p class="footer-heading">Links</p></b>
+        <div class="footer-description">
+            Here are some links where you can find me and know more about my social life
+        </div>
+            <div class="social">
+                <a class="link" href="https://github.com/AdrishikharChowdhury" target="_main"><i class="fa-brands fa-github"></i></a>
+                <a class="link" href="https://www.linkedin.com/in/adrishikhar-chowdhury-b44035319/" target="_main"><i class="fa-brands fa-linkedin"></i></a>
+                <a class="link" href="https://www.facebook.com/adrishikhar.chowdhury?mibextid=ZbWKwL" target="_main"><i class="fa-brands fa-facebook"></i></a>
+                <a class="link" href="https://www.instagram.com/adrishikharchowdhury/" target="_main"><i class="fa-brands fa-instagram"></i></a>
+                <a class="link" href="https://linktr.ee/Adrishikhar" target="_main"><i class="fa-solid fa-tree"></i></a>
+            </div>
+        
+        <hr>
+    <div  class="copyright">
+        <div class="copyright-heading">
+            <p>
+                &copy; 2025 Adrishikhar Chowdhury. All rights reserved.
+            </p>
+        </div>
+        <div class="copyright-description">
+            <p>
+                Building innovative projects and empowering others through knowledge and collaboration.
+            </p>
+        </div>
+    </div>
     </footer>
 </body>
 </html>
