Added Shirokuma Cafe

--- a/Projects.html
+++ b/Projects.html
@@ -243,6 +243,29 @@
                 </p>
             </div>
             <hr class="divider">
+            <div class="info">
+                <p class="heading"><b>Shirokuma Cafe</b></p>
+                <p class="description">
+                    <ul>
+                        <li><b>Date:</b> March 2025</li>
+                        <li><b>Description:</b>
+                            A cozy and visually appealing <b>landing page</b> for a fictional café named <b>Shirokuma Cafe</b>, 
+                            designed to highlight its ambiance, offerings, and charm.
+                        </li>
+                        <li><b>Technologies Used:</b> HTML, CSS, JavaScript</li>
+                        <li><b>Key Features:</b> 
+                            Smooth <b>scroll animations</b>, <b>responsive layout</b>, <b>image-rich sections</b>, and a <b>stylized menu</b>.
+                        </li>
+                        <li><b>Key Takeaways:</b> 
+                            Enhanced <b>layout design skills</b>, improved <b>media queries</b> usage, and practiced <b>animation techniques</b> for better user experience.
+                        </li>
+                        <li><b>Links:</b> 
+                            <a href="https://github.com/AdrishikharChowdhury/Shirokuma-Cafe.git" target="_main">View code on GitHub</a>
+                        </li>
+                    </ul>
+                </p>
+            </div>            
+            <hr class="divider">
             <div class="quote">
                 <p class="quoted">
                     <i>"If you don't make your own path, you'll be nothing but a follower."</i>
