modified banking system url

--- a/Projects.html
+++ b/Projects.html
@@ -116,7 +116,7 @@
                             <li><b>Technologies Used:</b> Python</li>
                             <li><b>Key Features:</b> Object-oriented programming, classes, methods, user input</li>
                             <li><b>Key Takeaways:</b> OOP concepts, user interfaces, basic banking operations</li>
-                            <li><b>Links:</b> <a href="https://bit.ly/40tNo8x" target="_main"> https://bit.ly/40tNo8x</a>
+                            <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Banking-System.git" target="_main"> View code on GitHub</a>
                             </li>
                         </ul>
                     </p>
