added quiz section

--- a/Projects.html
+++ b/Projects.html
@@ -266,6 +266,29 @@
                 </p>
             </div>            
             <hr class="divider">
+            <div class="info">
+                <p class="heading"><b>Python Quiz App</b></p>
+                <p class="description">
+                    <ul>
+                        <li><b>Date:</b> March 2025</li>
+                        <li><b>Description:</b>
+                            A terminal-based <b>quiz application</b> built using Python, allowing users to test their knowledge through interactive, multiple-choice questions.
+                        </li>
+                        <li><b>Technologies Used:</b> Python
+                        </li>
+                        <li><b>Key Features:</b> 
+                            <b>Score tracking</b>, <b>randomized questions</b>, <b>clear prompts</b>, and easy <b>customization of questions</b>.
+                        </li>
+                        <li><b>Key Takeaways:</b> 
+                            Improved <b>Python basics</b>, practiced <b>input/output handling</b>, and learned to manage <b>quiz logic flow</b>.
+                        </li>
+                        <li><b>Links:</b> 
+                            <a href="https://github.com/AdrishikharChowdhury/Quiz.git" target="_main">View code on GitHub</a>
+                        </li>
+                    </ul>
+                </p>
+            </div>
+            <hr class="divider">            
             <div class="quote">
                 <p class="quoted">
                     <i>"If you don't make your own path, you'll be nothing but a follower."</i>
