--- a/Projects.html
+++ b/Projects.html
@@ -71,7 +71,7 @@
                             <li><b>Technologies Used:</b> Python</li>
                             <li><b>Key Features:</b> Random number generation, user input, conditional statements, loops</li>
                             <li><b>Key Takeaways:</b> Problem-solving, user interaction, game development fundamentals</li>
-                            <li><b>Links:</b> <a href="https://bit.ly/3WziJFD" target="_main">https://bit.ly/3WziJFD</a></li>
+                            <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Guess-The-Number.git" target="_main"> View Code on GitHub</a></li>
                     </ul>
                     </p>
             </div>
