--- a/Projects.html
+++ b/Projects.html
@@ -86,7 +86,7 @@
                             <li><b>Technologies Used:</b> Python</li>
                             <li><b>Key Features:</b> Random password generation, user input, string manipulation</li>
                             <li><b>Key Takeaways:</b> Data security, utility tools, string operations</li>
-                            <li><b>Links:</b> <a href="https://bit.ly/40sWxhP" target="_main"> https://bit.ly/40sWxhP</a></li>
+                            <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Password-Generator.git" target="_main"> View Code on GitHub</a></li>
                         </ul>
                     </p>
             </div>
