Added New peoject and certificate

--- a/Experience.html
+++ b/Experience.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/substyle.css">
     <link rel="stylesheet" href="./assets/css/submobilestyle.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.webp">
-    <link rel="stylesheet" href="./assets/css/dark mode.css">
+    <link rel="stylesheet" href="./assets/css/dark-mode.css">
     <script src="./assets/js/script.js" defer></script>
 </head>
 <body>
@@ -64,9 +64,10 @@
                 <p class="heading"><b>Intern</b></p>
             <p class="description">
                 <ul>
-                    <li><b>ALABS</b> <i>(November 2024-March 2025):</i>
+                    <li><b>System On Silicon Project</b> <i>(November 2024-March 2025):</i>
                         <ul>
-                            <li>Working and learning flask and postgreSQL using python</li>
+                            <li>Explored <b>Flask</b> and <b>PostgreSQL</b> using Python, while also learning to deploy and manage services using <b>AWS</b>.</li>
+                            <li><div id="sos"><b>Download Certificate</b></div></li>
                         </ul>
                         </li>
                 </ul>
