--- a/Projects.html
+++ b/Projects.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/substyle.css">
     <link rel="stylesheet" href="./assets/css/submobilestyle.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.webp">
-    <link rel="stylesheet" href="./assets/css/dark mode.css">
+    <link rel="stylesheet" href="./assets/css/dark-mode.css">
     <script src="./assets/js/script.js" defer></script>
 </head>
 <body>
@@ -284,6 +284,29 @@
                         </li>
                         <li><b>Links:</b> 
                             <a href="https://github.com/AdrishikharChowdhury/Quiz.git" target="_main">View code on GitHub</a>
+                        </li>
+                    </ul>
+                </p>
+            </div>
+            <hr class="divider">
+            <div class="info">
+                <p class="heading"><b>Student Management System</b></p>
+                <p class="description">
+                    <ul>
+                        <li><b>Date:</b> April 2025</li>
+                        <li><b>Description:</b>
+                            A terminal-based <b>student management system</b> built using C, designed to handle student records such as personal details, grades, and attendance efficiently.
+                        </li>
+                        <li><b>Technologies Used:</b> C (Standard Library Functions, File Handling)
+                        </li>
+                        <li><b>Key Features:</b> 
+                            <b>Record creation</b>, <b>updating</b>, <b>deletion</b>, <b>search by ID/name</b>, and data <b>stored in files</b>.
+                        </li>
+                        <li><b>Key Takeaways:</b> 
+                            Strengthened knowledge of <b>C programming</b>, practiced <b>file I/O operations</b>, and learned to build <b>menu-driven programs</b>.
+                        </li>
+                        <li><b>Links:</b> 
+                            <a href="https://github.com/YourGitHubUsername/Student-Management-System" target="_main">View code on GitHub</a>
                         </li>
                     </ul>
                 </p>
