--- a/About Me.html
+++ b/About Me.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/substyle.css">
     <link rel="stylesheet" href="./assets/css/submobilestyle.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.webp">
-    <link rel="stylesheet" href="./assets/css/dark mode.css">
+    <link rel="stylesheet" href="./assets/css/dark-mode.css">
     <script src="./assets/js/script.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
