--- a/Education.html
+++ b/Education.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/substyle.css">
     <link rel="stylesheet" href="./assets/css/submobilestyle.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.webp">
-    <link rel="stylesheet" href="./assets/css/dark mode.css">
+    <link rel="stylesheet" href="./assets/css/dark-mode.css">
     <script src="./assets/js/script.js" defer></script>
 </head>
 <body>
